modification chekpoint redux

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,9 @@ code {
   width: 110%;
   
 }
+.filter{
+  justify-content: space-around;
+}
 /* li{
   display: flex;
   justify-content: space-between !important;
